# fts-rest-flask

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  NOTICE  README.md  create-flask-machine.sh  dev-requirements.in  dev-requirements.txt  fts3config  fts_presentation.md  migration_docs.md  pipcompile.sh  pipsyncdev.sh  pre-commit  precommit_install.sh  requirements.in  requirements.txt  runhttpd.sh  runtests.sh  setup.cfg  setup.py
.gitlab-ci/: Dockerfile  Dockerfile-rpm  bandit.ini  db.sh  db.sql  docker_push.sh  precommit_install.sh  radon.sh  setup-db.sh
.gitlab-ci/docker/: Dockerfile  Dockerfile-ci  Dockerfile-ci-alma9  Dockerfile-ci-cc7  Dockerfile-rpm  create-ci-image.sh  docker_push.sh
packaging/: Dockerfile  fedora-packages.sh  fts-repo-manager.py  fts-rest-client.sh  fts-rest-client.spec  fts-rest-server.sh  fts-rest-server.spec  fts-rest.spec  todo.txt
packaging/client/: fts-rest-client.sh  fts-rest-client.spec  make-dist.sh  make-srpm.sh
packaging/docker/: Dockerfile  docker-compose.yml  docker-run-example.sh
packaging/requirements/: python36-jwcrypto-0.7.noarch.rpm  python36-mako-1.1.2.noarch.rpm  python36-markupsafe-1.1.1.x86_64.rpm  python36-mysqlclient-1.4.6.x86_64.rpm  python36-oic-1.2.0.noarch.rpm  python36-pyjwkest-1.4.3.noarch.rpm  python36-pyjwt-1.7.1.noarch.rpm
packaging/server/: fts-rest-server.sh  fts-rest-server.spec  make-dist.sh  make-srpm.sh
src/: hello.py
src/cli/: fts-rest-ban  fts-rest-delegate  fts-rest-delete-submit  fts-rest-server-status  fts-rest-transfer-cancel  fts-rest-transfer-list  fts-rest-transfer-status  fts-rest-transfer-submit  fts-rest-whoami
src/fts3/: __init__.py
src/fts3/cli/: __init__.py  banning.py  base.py  delegator.py  jobcanceller.py  jobdeletionsubmitter.py  joblister.py  jobshower.py  jobsubmitter.py  serverstatus.py  utils.py  whoami.py
src/fts3/model/: __init__.py  banned.py  base.py  cloudStorage.py  config.py  credentials.py  dm.py  file.py  job.py  oauth2.py  optimizer.py  server.py  version.py
src/fts3/rest/client/: __init__.py  ban.py  context.py  delegator.py  exceptions.py  inquirer.py  request.py  submitter.py
src/fts3/scripts/: fts_rest_ban.py  fts_rest_delegate.py  fts_rest_delete_submit.py  fts_rest_server_status.py  fts_rest_transfer_cancel.py  fts_rest_transfer_list.py  fts_rest_transfer_status.py  fts_rest_transfer_submit.py  fts_rest_whoami.py
src/fts3/util/: config.py
src/fts3rest/: fts3config  fts3rest.conf  fts3rest.wsgi  fts3rest_dev.conf.in  fts3restconfig  fts3restwsgi.py  ftsrestconfig  httpd_fts.conf  install-httpd-dev.sh  runtests.sh
src/fts3rest/fts3rest/: mako.py
src/fts3rest/fts3rest/config/: config.py  middleware.py
src/fts3rest/fts3rest/controllers/: CSInterface.py  CSdropbox.py  CSswift.py  admin.py  api.py  archive.py  autocomplete.py  banning.py  cloudStorage.py  datamanagement.py  delegation.py  files.py  jobs.py  optimizer.py  serverstatus.py
src/fts3rest/fts3rest/lib/: IAMTokenRefresher.py  JobBuilder.py  JobBuilder_utils.py  SwiftTokenRefresher.py  gfal2_wrapper.py  heartbeat.py  http_exceptions.py  oauth2provider.py  openidconnect.py  swiftauth.py
src/fts3rest/fts3rest/model/: __init__.py  banned.py  base.py  cloudStorage.py  config.py  credentials.py  dm.py  file.py  job.py  meta.py  oauth2.py  (+4 more)
(+88 files in other folders)
