# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://docs.python.org/3/distutils/configfile.html
# https://www.bernat.tech/pep-517-518/
[metadata]
name = fts3-rest
description = FTS Python3 CLI and libraries
url = https://gitlab.cern.ch/fts/fts-rest-flask
license = Apache License 2.0
license_files = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Environment :: Console
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
author = CERN -- FTS team
author_email = fts-devel@cern.ch

[options]
python_requires= >=3.6

# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
package_dir=
    =src
packages = find:
install_requires = 
    M2Crypto
    requests

[options.packages.find]
where = src

scripts = 
    src/cli/fts-rest-transfer-status
    src/cli/fts-rest-whoami
    src/cli/fts-rest-delete-submit
    src/cli/fts-rest-ban
    src/cli/fts-rest-transfer-list
    src/cli/fts-rest-server-status
    src/cli/fts-rest-transfer-submit
    src/cli/fts-rest-transfer-cancel
    src/cli/fts-rest-delegate

version="1",  # Required


    
    
    
    # packages=[
    #     "fts3",
    #     "fts3.rest",
    #     "fts3.cli",
    #     "fts3.rest.client",
    #     "fts3.rest.client.easy",
    # ],  # Required

    
    scripts=glob(path.join(here, "src", "cli", "fts-*")),
