[metadata]
name = fts3-rest
description = FTS Python3 CLI and libraries
long_description = file: README.md
url = https://gitlab.cern.ch/fts/fts-rest-flask
license = Apache License 2.0
license_files = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Environment :: Console
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
author = CERN -- FTS team
author_email = fts-devel@cern.ch

[options]
python_requires= >=3.6

# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
package_dir=
    =src
packages = find:
install_requires =
    M2Crypto
    requests
    # needed to get the version
    setuptools

[options.packages.find]
where = src

[options.entry_points]

console_scripts =
    fts-rest-ban = fts3.scripts.fts_rest_ban:main
    fts-rest-delegate = fts3.scripts.fts_rest_delegate:main
    fts-rest-delete-submit = fts3.scripts.fts_rest_delete_submit:main
    fts-rest-server-status = fts3.scripts.fts_rest_server_status:main
    fts-rest-transfer-cancel = fts3.scripts.fts_rest_transfer_cancel:main
    fts-rest-transfer-list = fts3.scripts.fts_rest_transfer_list:main
    fts-rest-transfer-status = fts3.scripts.fts_rest_transfer_status:main
    fts-rest-transfer-submit = fts3.scripts.fts_rest_transfer_submit:main
    fts-rest-whoami = fts3.scripts.fts_rest_whoami:main
